--- a/WowLatinos/wwwroot/css/blog.css
+++ b/WowLatinos/wwwroot/css/blog.css
@@ -173,8 +173,8 @@
 }
 
 .blog-timeline .timeline-item {
-	margin: 20px 10px 10px 10px;
-	padding: 20px;
+	/*margin: 20px 10px 10px 10px;
+	 padding: 20px;*/
 	position: relative;
 	width: 43%;
 	float: left;
