--- a/WowLatinos/wwwroot/css/core_css.css
+++ b/WowLatinos/wwwroot/css/core_css.css
@@ -5029,8 +5029,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 .blog-timeline .timeline-item {
-	margin: 20px 10px 10px 10px;
-	padding: 20px;
+	/*margin: 20px 10px 10px 10px;
+	padding: 20px;*/
 	position: relative;
 	width: 43%;
 	float: left;
